--- a/css/pte.css
+++ b/css/pte.css
@@ -13,6 +13,6 @@
    width: 190px;
 }
 
-#pte-controls { clear: both; margin-top: 10px}
+#pte-controls { clear: both; padding-top: 10px}
 #pte-controls #pte-save { margin-left: 20px; }
 
