--- a/css/pte-new.scss
+++ b/css/pte-new.scss
@@ -19,6 +19,19 @@ a.stage-navigation, a.stage-navigation:visited {
 	}
 }
 
+a {
+	color: #444;
+	font-family: 'Amaranth', serif; 
+	font-style: italic; 
+	text-shadow: none;
+	&:visited {
+		color: #black;
+	}
+	img {
+		vertical-align: bottom;
+	}
+}
+
 h1, { 
 	color: #2386e2;
 	font-family: 'Amaranth', serif; 
