--- a/css/pte.css
+++ b/css/pte.css
@@ -1,18 +1,212 @@
-#pte-display {
-   display: none;
-   width: 600px;
-}
+/* Generated variables */
+/** BEGIN CSS RESET **/
+/* http://meyerweb.com/eric/tools/css/reset/ 
+v2.0 | 20110126
+License: none (public domain)
+*/
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline; }
 
-#pte-edit {
-   width: 400px;
-   float: left;
-   padding-right: 10px;
-}
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure,
+footer, header, hgroup, menu, nav, section {
+  display: block; }
 
-#pte-current img {
-   width: 190px;
-}
+body {
+  line-height: 1; }
 
-#pte-controls { clear: both; padding-top: 10px}
-#pte-controls #pte-save { margin-left: 20px; }
+ol, ul {
+  list-style: none; }
 
+blockquote, q {
+  quotes: none; }
+
+blockquote:before, blockquote:after,
+q:before, q:after {
+  content: '';
+  content: none; }
+
+table {
+  border-collapse: collapse;
+  border-spacing: 0; }
+
+/* END RESET */
+a.stage-navigation, a.stage-navigation:visited {
+  color: #38ab36;
+  font-family: 'Amaranth', serif;
+  font-size: 0.8em;
+  font-style: italic;
+  text-decoration: none;
+  text-shadow: none; }
+  a.stage-navigation img, a.stage-navigation:visited img {
+    border: none;
+    vertical-align: bottom; }
+
+a {
+  color: #444;
+  font-family: 'Amaranth', serif;
+  font-style: italic;
+  text-shadow: none; }
+  a:visited {
+    color: #black; }
+  a img {
+    vertical-align: bottom; }
+
+h1 {
+  color: #2386e2;
+  font-family: 'Amaranth', serif;
+  font-style: italic;
+  font-size: 1.6em;
+  text-shadow: white 1px 1px 5px, 2px 2px 10px #999; }
+
+body {
+  font-family: 'PT Serif', serif;
+  /*font-family: 'Puritan', serif;*/
+  /*overflow: auto;*/
+  overflow-x: hidden;
+  margin: auto;
+  max-width: 750px;
+  background-color: #efefef;
+  /*position: relative;*/ }
+
+#pte-image {
+  float: left;
+  margin-top: 5px;
+  width: 402px; }
+
+#pte-buttons button {
+  font-family: "Amaranth", Tahoma, sans-serif;
+  font-size: larger;
+  line-height: 130%;
+  margin: 10px auto;
+  padding: 10px;
+  width: 100%; }
+
+#pte-confirm {
+  font-family: "Amaranth", Tahoma, sans-serif;
+  font-size: larger;
+  line-height: 130%;
+  margin: 10px auto;
+  padding: 10px;
+  width: 75%; }
+
+#pte-sizes-container {
+  overflow: auto;
+  padding-left: 15px;
+  float: left; }
+
+#pte-selectors, #pte-stage2-selectors {
+  margin-bottom: 10px; }
+
+#pte-sizes {
+  overflow-x: hidden;
+  overflow-y: scroll;
+  position: relative;
+  border: 1px solid #dddddd;
+  width: 314px; }
+  #pte-sizes img {
+    max-width: 264px; }
+
+table tr {
+  border-bottom: 1px solid #dddddd; }
+  table tr.selected {
+    background-color: #fff; }
+
+table td {
+  position: relative;
+  vertical-align: middle;
+  padding: 15px 0; }
+
+/*.col1 { */
+/*width: 50px; */
+/*}*/
+.col2 {
+  padding-right: 20px; }
+
+.pte-size-label {
+  /*background: #bcbcbc;*/
+  background: #cdcdcd;
+  bottom: 0;
+  font-family: 'Amaranth', serif;
+  font-weight: bolder;
+  padding: 5px 0px 7px 5px;
+  /*padding: 5px;*/ }
+  .pte-size-label .actual {
+    font-size: 0.8em;
+    font-weight: normal; }
+
+.pte-edit-label {
+  display: block; }
+
+#pte-loading {
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%; }
+  #pte-loading #pte-loading-opaque {
+    background-color: #000;
+    height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    opacity: 0.8;
+    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=80)";
+    filter: alpha(opacity=80); }
+  #pte-loading #pte-loading-spinner {
+    position: relative;
+    top: 50%;
+    width: 200px;
+    margin: 0 auto;
+    text-align: center; }
+
+.stage {
+  float: left;
+  left: 0;
+  position: relative;
+  top: 0;
+  /*overflow: hidden;*/
+  /*width: $width;*/ }
+
+#stage2, #stage3 {
+  display: none;
+  left: 1500px;
+  width: 750px; }
+
+#stage2 table {
+  width: 100%; }
+
+#stage2 img {
+  /*max-width: 100%;*/
+  max-width: 710px; }
+
+#error {
+  color: #aa0000; }
+  #error ul {
+    list-style: disc;
+    margin: 10px 0px 10px 20px;
+    /*li {                        */
+    /*   list-style-image: 'disc';*/
+    /*}                           */ }
+
+#success {
+  color: #38ab36;
+  font-size: 1.5em; }
