--- a/css/pte.scss
+++ b/css/pte.scss
@@ -4,9 +4,60 @@ $pte-sizes-container-padding: 15px;
 $table-border:                #ddd;
 
 /* Generated variables */
-$pte-sizes-width: $width - $wp-picture-width - $pte-sizes-container-padding - 2 - 10;
+$pte-sizes-width: $width - $wp-picture-width - $pte-sizes-container-padding - 2 - 19;
 $pte-sizes-img-width: $pte-sizes-width - 50px;
 $green: #38ab36;
+
+			/** BEGIN CSS RESET **/
+			/* http://meyerweb.com/eric/tools/css/reset/ 
+			v2.0 | 20110126
+			License: none (public domain)
+			*/
+
+			html, body, div, span, applet, object, iframe,
+			h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+			a, abbr, acronym, address, big, cite, code,
+			del, dfn, em, img, ins, kbd, q, s, samp,
+			small, strike, strong, sub, sup, tt, var,
+			b, u, i, center,
+			dl, dt, dd, ol, ul, li,
+			fieldset, form, label, legend,
+			table, caption, tbody, tfoot, thead, tr, th, td,
+			article, aside, canvas, details, embed, 
+			figure, figcaption, footer, header, hgroup, 
+			menu, nav, output, ruby, section, summary,
+			time, mark, audio, video {
+				margin: 0;
+				padding: 0;
+				border: 0;
+				font-size: 100%;
+				font: inherit;
+				vertical-align: baseline;
+			}
+			/* HTML5 display-role reset for older browsers */
+			article, aside, details, figcaption, figure, 
+			footer, header, hgroup, menu, nav, section {
+				display: block;
+			}
+			body {
+				line-height: 1;
+			}
+			ol, ul {
+				list-style: none;
+			}
+			blockquote, q {
+				quotes: none;
+			}
+			blockquote:before, blockquote:after,
+			q:before, q:after {
+				content: '';
+				content: none;
+			}
+			table {
+				border-collapse: collapse;
+				border-spacing: 0;
+			}
+			/* END RESET */
 
 a.stage-navigation, a.stage-navigation:visited {
 	color: $green;
@@ -123,6 +174,10 @@ table td {
 	font-weight: bolder;
 	padding: 5px 0px 7px 5px;
 	/*padding: 5px;*/
+	.actual { 
+		font-size: 0.8em;
+		font-weight: normal;
+	}
 }
 
 .pte-edit-label { 
