--- a/css/pte.css
+++ b/css/pte.css
@@ -75,6 +75,12 @@ h1 {
   font-style: italic;
   font-size: 1.6em;
   text-shadow: white 1px 1px 5px, 2px 2px 10px #999; }
+  h1 a.show-log-messages {
+    color: #CD0000;
+    font-size: .5em;
+    font-style: italic;
+    text-decoration: none;
+    text-shadow: none; }
 
 body {
   font-family: 'PT Serif', serif;
@@ -161,28 +167,51 @@ table td {
 .pte-edit-label {
   display: block; }
 
+/* Used by #pte-log and #pte-loading */
+.pte-opaque {
+  background-color: #000;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  opacity: 0.8;
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=80)";
+  filter: alpha(opacity=80);
+  z-index: 0; }
+
+#pte-log {
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  display: none;
+  z-index: 1300; }
+  #pte-log #pte-log-container {
+    position: relative;
+    margin: 0 auto;
+    text-align: center;
+    top: 5%;
+    height: 80%; }
+  #pte-log a {
+    color: white; }
+  #pte-log textarea {
+    height: 400px;
+    width: 90%; }
+
 #pte-loading {
   height: 100%;
   position: absolute;
   top: 0;
   left: 0;
   width: 100%; }
-  #pte-loading #pte-loading-opaque {
-    background-color: #000;
-    height: 100%;
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    opacity: 0.8;
-    -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=80)";
-    filter: alpha(opacity=80); }
   #pte-loading #pte-loading-spinner {
     position: relative;
-    top: 50%;
-    width: 200px;
     margin: 0 auto;
-    text-align: center; }
+    text-align: center;
+    top: 50%;
+    width: 200px; }
 
 .stage {
   float: left;
