--- a/css/pte.scss
+++ b/css/pte.scss
@@ -35,12 +35,19 @@ a {
 	}
 }
 
-h1, { 
+h1 { 
 	color: #2386e2;
 	font-family: 'Amaranth', serif; 
 	font-style: italic; 
 	font-size: 1.6em;
 	text-shadow: white 1px 1px 5px, 2px 2px 10px #999;
+	a.show-log-messages {
+		color: #CD0000;
+		font-size: .5em;
+		font-style: italic; 
+		text-decoration: none;
+		text-shadow: none;
+	}
 }
 
 body { 
@@ -148,24 +155,48 @@ table td {
 	left: 0;
 	width: 100%;
 }
+@mixin full-screen-embedded {
+	position: relative;
+	margin: 0 auto;
+	text-align: center;
+}
+
+/* Used by #pte-log and #pte-loading */
+$opacity: 80;
+$opacity_percent: $opacity/100;
+.pte-opaque {
+	background-color: #000;
+	@include full-screen;
+	opacity: $opacity_percent;
+	-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=" + $opacity + ")";
+	filter: alpha(opacity=$opacity);
+	z-index: 0;
+}
+
+#pte-log {
+	@include full-screen;
+	display: none;
+	z-index: 1300;
+	#pte-log-container {
+		@include full-screen-embedded;
+		top: 5%;
+		height: 80%;
+	}
+	a {
+		color: white;
+	}
+	textarea {
+		height: 400px;
+		width: 90%;
+	}
+}
 
 #pte-loading {
-	$opacity: 80;
-	$opacity_percent: $opacity/100;
 	@include full-screen;
-	#pte-loading-opaque {
-		background-color: #000;
-		@include full-screen;
-		opacity: $opacity_percent;
-		-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=" + $opacity + ")";
-		filter: alpha(opacity=$opacity);
-	}
 	#pte-loading-spinner {
-		position: relative;
+		@include full-screen-embedded;
 		top: 50%;
 		width: 200px;
-		margin: 0 auto;
-		text-align: center;
 	}
 }
 
