--- a/css/pte.css
+++ b/css/pte.css
@@ -75,12 +75,6 @@ h1 {
   font-style: italic;
   font-size: 1.6em;
   text-shadow: white 1px 1px 5px, 2px 2px 10px #999; }
-  h1 a.show-log-messages {
-    color: #CD0000;
-    font-size: .5em;
-    font-style: italic;
-    text-decoration: none;
-    text-shadow: none; }
 
 body {
   font-family: 'PT Serif', serif;
@@ -187,18 +181,77 @@ table td {
   left: 0;
   width: 100%;
   display: none;
-  z-index: 1300; }
+  z-index: 1300;
+  color: #ddd; }
+  #pte-log a {
+    color: white; }
   #pte-log #pte-log-container {
     position: relative;
     margin: 0 auto;
     text-align: center;
     top: 5%;
     height: 80%; }
-  #pte-log a {
-    color: white; }
+  #pte-log a.button {
+    background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#303080), to(#00007f));
+    background-image: -webkit-linear-gradient(top, #303080, #00007f);
+    background-image: -moz-linear-gradient(top, #303080, #00007f);
+    background-image: -ms-linear-gradient(top, #303080, #00007f);
+    background-image: -o-linear-gradient(top, #303080, #00007f);
+    /*border: 2px solid white;*/
+    border-radius: 0 0 7px 7px;
+    -moz-border-radius: 0 0 7px 7px;
+    -webkit-border-radius: 0 0 7px 7px;
+    padding: 0 10px 3px 10px;
+    text-decoration: none; }
+  #pte-log a.button:hover {
+    background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#00007f), to(#303080));
+    background-image: -webkit-linear-gradient(top, #00007f, #303080);
+    background-image: -moz-linear-gradient(top, #00007f, #303080);
+    background-image: -ms-linear-gradient(top, #00007f, #303080);
+    background-image: -o-linear-gradient(top, #00007f, #303080); }
+  #pte-log p {
+    line-height: 1.2em;
+    margin: 0 auto 20px;
+    text-align: left;
+    width: 90%; }
   #pte-log textarea {
     height: 400px;
     width: 90%; }
+
+a#pte-log-button.show-log-messages {
+  background-color: #cd0000;
+  border-radius: 0 0 7px 7px;
+  -moz-border-radius: 0 0 7px 7px;
+  -webkit-border-radius: 0 0 7px 7px;
+  top: 0;
+  right: 20px;
+  display: block;
+  /*left: 282px;*/
+  padding: 3px 5px 5px 5px;
+  position: fixed;
+  text-align: center;
+  color: white;
+  font-size: 0.9em;
+  font-style: italic;
+  text-decoration: none;
+  text-shadow: none;
+  background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, from(red), to(#cd0000));
+  background-image: -webkit-linear-gradient(top, red, #cd0000);
+  background-image: -moz-linear-gradient(top, red, #cd0000);
+  background-image: -ms-linear-gradient(top, red, #cd0000);
+  background-image: -o-linear-gradient(top, red, #cd0000); }
+
+a#pte-log-button.show-log-messages:hover {
+  background-image: -webkit-gradient(linear, 0% 0%, 0% 100%, from(#cd0000), to(red));
+  background-image: -webkit-linear-gradient(top, #cd0000, red);
+  background-image: -moz-linear-gradient(top, #cd0000, red);
+  background-image: -ms-linear-gradient(top, #cd0000, red);
+  background-image: -o-linear-gradient(top, #cd0000, red); }
+
+/* FIXES IE to bottom of screen */
+* html #pte-log-button.show-log-messages {
+  position: absolute;
+  top: expression((0-(footer.offsetHeight)+(document.documentElement.clientHeight ? document.documentElement.clientHeight : document.body.clientHeight)+(ignoreMe = document.documentElement.scrollTop ? document.documentElement.scrollTop : document.body.scrollTop))+'px'); }
 
 #pte-loading {
   height: 100%;
