--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -3,7 +3,7 @@ layout: default
 ---
 
            <div class="jumbotron">
-               <img src="assets/images/pte.png" class="pull-right"/>
+              <img src="{{ site.baseurl }}assets/images/pte.png" class="pull-right"/>
                <h1>Post Thumbnail Editor</h1>
                <!--<p class="lead">Take control of wordpress post-thumbnails.</p>-->
                <a class="btn btn-large btn-success" href="http://downloads.wordpress.org/plugin/post-thumbnail-editor.zip">Download Stable Version</a>
@@ -14,7 +14,7 @@ layout: default
                        <h2>Post Thumbnail Editor</h2>
                        <p>Control how wordpress crops your post-thumbnails.</p>
                        <p>
-                           <a href="editor.html" class="btn btn-primary btn-large">Learn More</a>
+                       <a href="{{ site.baseurl }}editor" class="btn btn-primary btn-large">Learn More</a>
                        </p>
                    </div>
                </div>
@@ -24,7 +24,7 @@ layout: default
                        <p>Easily configure post-thumbnail functionality for your posts and
                            plugins.</p>
                        <p>
-                           <a href="extras.html" class="btn btn-primary btn-large">Learn More</a>
+                       <a href="{{ site.baseurl }}extras" class="btn btn-primary btn-large">Learn More</a>
                        </p>
                    </div>
                </div>
