--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -1,5 +1,9 @@
 ---
 layout: default
+footer-js:
+   - //ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js
+   - ptesiteurlassets/bootstrap/js/bootstrap.js
+   - ptesiteurlassets/js/page.js
 ---
            <div class="row">
                <div class="span3">
@@ -7,59 +11,8 @@ layout: default
                    </ul>
                </div>
                <div id="pte-content" class="span9">
-                   <img src="assets/images/pte-127x110.png" class="pull-right
+                  <img src="{{ site.baseurl }}assets/images/pte-127x110.png" class="pull-right
                    content-header"/>
                    {{ content }}
                </div>
            </div>
-           <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js"></script>
-           <script src="assets/bootstrap/js/bootstrap.js"></script>
-           <script type="text/javascript" charset="utf-8">
-
-(function($){
-    // Affix the menu to the side
-    $nav = $('#pte-nav');
-    position = $nav.position();
-    position.top -= 60;
-    position.bottom = 710;
-    console.log( position.top );
-    $nav.affix({
-        offset: position
-    });
-
-    // Update the links
-    //function updateLinks(h2Txt, id){
-    //    var $elem = $('h2').filter(function(i){
-    //        if ( h2Txt == $(this).text().toLowerCase() && this.id){
-    //            return true;
-    //        }
-    //        return false;
-    //    });
-
-    //    $elem.each(function(){
-    //        this.id = id;
-    //    });
-    //}
-
-    //updateLinks('post thumbnail editor', 'editor');
-    //updateLinks('post thumbnail extras', 'extras');
-
-    // Generate Menu:
-    var selector = [];
-    $.each(['h2','h3'], function(i,elem){
-        selector.push(elem + '[id^="toc_"]');
-    });
-    $(selector.join(",")).each(function(i, h){
-        $h = $(h);
-        url = $("<a>").attr('href','#' + h.id).text($h.text()).addClass(h.nodeName.toLowerCase());
-        if (i < 1)
-            url.addClass('active');
-        $nav.append( $('<li>').append(url) );
-    })
-
-    // refresh the scrollspy
-    $('body').scrollspy({offset: 70});
-
-})(jQuery);
-
-           </script>
