Further updated documentation
Added screenshots for extras

--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -2,7 +2,7 @@
 layout: default
 footer-js:
    - //ajax.googleapis.com/ajax/libs/jquery/2.0.0/jquery.min.js
-   - ptesiteurlassets/bootstrap/js/bootstrap.js
+   - ptesiteurlassets/bootstrap/js/bootstrap.min.js
    - ptesiteurlassets/js/page.js
 ---
            <div class="row">
