Added logo to navbar

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,9 @@ donation-txt: >
        <div class="navbar navbar-inverse navbar-fixed-top">
            <div class="navbar-inner">
                <div class="container">
-                  <a class="brand" href="{{ site.baseurl }}">PTE</a>
+                  <a class="brand" href="{{ site.baseurl }}">
+                     <img src="{{ site.baseurl }}assets/images/pte-29x25.png"/>
+                  </a>
                    <ul class="nav">
                       <li><a href="{{ site.baseurl }}editor">Editor</a></li>
                       <li><a href="{{ site.baseurl }}extras">Extras</a></li>
