--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,7 +9,7 @@ donation-txt: >
    <head>
       <meta http-equiv="content-type" content="text/html; charset=utf-8" />
    
-      <title>Wordpress PTE Plugins - Post Thumbnail Editor/Extras</title>
+      <title>{{ page.title }}</title>
 
       <!-- Bootstrap -->
       <link rel="stylesheet" href="{{ site.baseurl }}assets/docs.css" />
