wepay is done... apparently

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -51,8 +51,12 @@ var CoinWidget_Config = {
     text_label : 'Post Thumbnail Editor'
 };
                                </script>
-                               <script src="http://c.coinwidget.com/widget.js"></script>
-                               <a class="wepay-widget" href="https://www.wepay.com/donate/34543/?widget_type=donations&widget_donation_id=34543&widget_auth_token=8af0c8d1030cb39acf8be63a2aea19344cae6fc9&widget_show_description=1&widget_show_thermometer=0&widget_show_donations=1">Donate to Post Thumbnail Editor Plugin</a><script id="wepay-widget_script" type="text/javascript" src="https://www.wepay.com/js/widget.wepay.js"></script>
+                               <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
+                                 <input type="hidden" name="cmd" value="_s-xclick">
+                                 <input type="hidden" name="hosted_button_id" value="4APJ9R7E338WN">
+                                 <input type="image" src="https://www.paypalobjects.com/en_US/i/btn/btn_donateCC_LG.gif" border="0" name="submit" alt="PayPal - The safer, easier way to pay online!">
+                                 <img alt="" border="0" src="https://www.paypalobjects.com/en_US/i/scr/pixel.gif" width="1" height="1">
+                               </form>
                            </div>
                        </div>
                    </div>
