--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -51,6 +51,7 @@ var CoinWidget_Config = {
     text_label : 'Post Thumbnail Editor'
 };
                                </script>
+                               <script src="http://c.coinwidget.com/widget.js"></script>
                                <form action="https://www.paypal.com/cgi-bin/webscr" method="post" target="_top">
                                  <input type="hidden" name="cmd" value="_s-xclick">
                                  <input type="hidden" name="hosted_button_id" value="4APJ9R7E338WN">
