Client: load data via JSON calls and integrate Jcrop.

--- a/trunk/client/src/pte.less
+++ b/trunk/client/src/pte.less
@@ -30,8 +30,8 @@ pte-editor {
    margin-right: @menu-width;
    position: relative;
 
-   #image, #actions {
-      width: 100;
+   #pte-editor-image, #actions {
+      width: 100%;
    }
 
    #actions {
@@ -39,9 +39,9 @@ pte-editor {
       padding: 20px 20px 0 0;
    }
 
-   #image {
+   #pte-editor-image {
       background: #DDD;
-      img {
+      #image-wrapper {
          max-width: 100%;
          max-height: 100%;
       }
