--- a/trunk/client/src/pte.less
+++ b/trunk/client/src/pte.less
@@ -7,6 +7,10 @@ body {
    display: none;
 }
 
+.inline {
+	display: inline-block;
+}
+
 .no-title .ui-dialog-titlebar {
    height: 0;
 }
@@ -61,4 +65,65 @@ pte-editor-menu {
          padding-bottom: 10px;
       }
    }
+}
+
+/* Post Thumbnail Selector */
+pte-thumbnail-selector {
+	display: block;
+	padding: 0 !important;
+	margin: 20px;
+
+	h2 {
+        span { font-size: .6em; font-weight: normal; }
+		margin-top: 0;
+	}
+}
+
+.table-div,
+.qs-div {
+	width: 49%;
+	vertical-align: top;
+}
+
+@selected-color: #CFC;
+.table {
+    width:100%;
+    border-spacing: 0;
+    border-collapse: collapse;
+    text-align:left;
+
+    tbody {
+        cursor: pointer;
+    }
+
+    th,td{
+        border-bottom:2px lighten(#CCC, 2%) solid;
+        padding:8px 12px;
+    }
+
+    td{
+        border-bottom:1px lighten(#CCC, 3%) solid;
+    }
+
+    tr.selected {
+        background-color: lighten(@selected-color, 6%);
+    }
+
+    &.table-striped tbody tr:nth-child(2n+1) {
+        background-color: lighten(#EEE, 2%);
+        &.selected {
+            background-color: lighten(@selected-color, 3%);
+        }
+    }
+
+    &.table-bordered{
+        border:1px #CCC solid;
+        td,th{
+            border:1px #CCC solid;
+        }
+    }
+
+    .r {
+        text-align: right;
+    }
 }
